--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Application to manage expenses.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack-server": "webpack-dev-server --inline --hot --progress --colors",
+    "webpack-test-server": "webpack-dev-server --inline --hot --progress --colors --config webpack.test.config.js",
+    "lint": "eslint main.js app/ test/",
+    "test": "npm run webpack-test-server",
+    "start": "npm run webpack-server"
   },
   "keywords": [],
   "author": "Lorenzo Ruiz <lars.bs@hotmail.com>",
   "license": "MIT",
+  "repository": "private",
   "devDependencies": {
     "babel-core": "^6.5.1",
     "babel-eslint": "^4.1.8",
@@ -19,6 +24,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
+    "eslint-loader": "^1.2.1",
     "eslint-plugin-react": "^3.16.1",
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.5",
