--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^3.0.0",
     "redux": "^3.3.1",
     "redux-devtools": "^3.1.1"
   }
