--- a/package.json
+++ b/package.json
@@ -27,17 +27,20 @@
     "eslint-loader": "^1.2.1",
     "eslint-plugin-react": "^3.16.1",
     "file-loader": "^0.8.5",
+    "font-awesome": "^4.5.0",
     "imports-loader": "^0.6.5",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
+    "normalize.css": "^3.0.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "history": "^2.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
