--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
-    "chart.js": "^1.0.2",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.2.1",
     "eslint-plugin-react": "^3.16.1",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
+    "highcharts": "^4.2.3",
     "imports-loader": "^0.6.5",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
@@ -36,6 +36,7 @@
     "mocha-loader": "^0.7.1",
     "moment": "^2.11.2",
     "normalize.css": "^3.0.3",
+    "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
