--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "moment": "^2.11.2",
     "normalize.css": "^3.0.3",
     "proxy-middleware": "^0.15.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.4",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "url": "^0.11.0",
