LastActivity component now uses real data

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-loader": "^1.2.1",
     "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
+    "faker": "^3.0.1",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
     "highcharts": "^4.2.3",
@@ -37,6 +38,7 @@
     "less-loader": "^2.2.2",
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
+    "moment": "^2.11.2",
     "normalize.css": "^3.0.3",
     "proxy-middleware": "^0.15.0",
     "remote-redux-devtools": "^0.1.2",
