--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "strict": 0,
     "no-console": 0,
     "comma-dangle": 0,
+    "no-constant-condition": 0,
     "no-unused-vars": 1,
     "jsx-quotes": 1,
     "react/jsx-no-undef": 1,
