Now add user works in local hosted api

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mocha-loader": "^0.7.1",
     "moment": "^2.11.2",
     "normalize.css": "^3.0.3",
+    "pluralize": "^1.2.1",
     "proxy-middleware": "^0.15.0",
     "remote-redux-devtools": "^0.1.2",
     "script-loader": "^0.6.1",
