--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "history": "^2.0.0",
     "react": "^0.14.7",
+    "react-datepicker": "^0.22.0",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "react-modal": "^0.6.1",
