--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   "dependencies": {
     "history": "^2.0.0",
     "react": "^0.14.7",
-    "react-datepicker": "^0.22.0",
+    "react-date-field": "^0.2.3",
+    "react-date-picker": "^4.0.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "react-modal": "^0.6.1",
