--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "font-awesome": "^4.5.0",
     "highcharts": "^4.2.3",
     "imports-loader": "^0.6.5",
+    "jsx-chai": "^2.0.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "mocha": "^2.4.5",
